# u16cstr

./: Cargo.toml  README.md
.github/workflows/: build-and-test.yml
src/: lib.rs
tests/: basic.rs  basic_in_another_crate.rs
tests/test-crate/: Cargo.toml
tests/test-crate/src/: lib.rs
