[package]
name = "u16cstr"
version = "0.3.1"
description = "A macro for creating c-style u16 wide strings at compile time."
readme = "README.md"
repository = "https://github.com/OpenByteDev/u16cstr"
homepage = "https://github.com/OpenByteDev/u16cstr"
documentation = "https://docs.rs/u16cstr"
license = "MIT"
authors = ["OpenByte <development.openbyte@gmail.com>"]
edition = "2018"
categories = []
keywords = ["widestring", "cstring", "c-style", "wide", "string"]

[dependencies]
widestring = { version = "1.0", default-features = false }
wchar = { version = "0.11", default-features = false }

[dev-dependencies.widestring]
version = "*"
features = ["alloc"]
