[package]
name = "u16cstr"
version = "0.4.0"
description = "A macro for creating c-style u16 wide strings at compile time."
readme = "README.md"
repository = "https://github.com/OpenByteDev/u16cstr"
homepage = "https://github.com/OpenByteDev/u16cstr"
documentation = "https://docs.rs/u16cstr"
license = "MIT"
authors = ["OpenByte <development.openbyte@gmail.com>"]
edition = "2021"
categories = []
keywords = ["widestring", "cstring", "c-style", "wide", "string"]

[dependencies]
widestring = { version = "1.0", default-features = false }

[dev-dependencies.widestring]
version = "1.0"
features = ["alloc"]
